--- a/demo1/demo-initial/src/main/resources/application.yml
+++ b/demo1/demo-initial/src/main/resources/application.yml
@@ -1,3 +1,20 @@
+spring:
+  profiles:
+    active: "development"
+
 service:
   message:
-    text: G´day
+    text: hello
+---
+spring:
+  profiles: "development"
+service:
+  message:
+    text: hi
+
+---
+spring:
+  profiles: "production"
+service:
+  message:
+    text: welcome
